--- a/index.html
+++ b/index.html
@@ -186,18 +186,18 @@
                 </div>
             </div>
             <!-- projects img1 -->
-            <div class="col-md-4 col-sm-6 projects-item">
-                <a href="#" target="_blank" class="projects-link" data-toggle="modal">
+           <div class="col-md-4 col-sm-6 projects-item">
+                <a href="https://getbojo.com/" target="_blank" class="projects-link" data-toggle="modal">
                     <div class="projects-hover">
                         <div class="projects-hover-content">
                             <i class="fa fa-fire fa-3x"></i>
                         </div>
                     </div>
-                    <img src="images/coming-soon-1898936_960_720.jpg" class="img-responsive" alt="">
+                    <img src="images/Bojo.jpg" class="img-responsive" alt="">
                 </a>
                 <div class="projects-caption">
-                    <h4>Project Name</h4>
-                    <p class="text-muted">Technology</p>
+                    <h4>Getbojo.com</h4>
+                    <p class="text-muted"> Bojo is Indias First Subscription Marketplace. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp                                  .</p>
                 </div>
             </div>
             <!-- End of projects img1 -->
