--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#" target="_blank">Rajeev Ranjan</a>
+                <a class="navbar-brand topnav" href="index.html" target="_blank">Rajeev Ranjan</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#home">Home</a>
+                        <a class="current" href="#home">Home</a>
                     </li>
                     <li>
                         <a href="#about">About</a>
