--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <ul class="list-inline intro-social-buttons">
 
                                 <li>
-                                    <a href="https://www.linkedin.com/in/rranjanin2012" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                    <a href="https://www.linkedin.com/in/rr466" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                                 </li>
 
                                 <li>
@@ -140,7 +140,7 @@
                              <h4>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</h4>
 
                             <p class="btn-hldr">
-                                <a class="cont" href="mailto:rranjanweb@gmail.com?Subject=Hello%20again" target="_top" class="main-btn email-lnk">message me <i class="email"></i></a>
+                                <a class="cont" href="mailto:rranjanin2012@gmail.com?Subject=Hello%20again" target="_top" class="main-btn email-lnk">message me <i class="email"></i></a>
                             </p>
                             <br/>
                             <p><bold> Call: </bold>
@@ -152,7 +152,7 @@
                     <div class="col-lg-6">
                         <ul class="list-inline banner-social-buttons">
                             <li>
-                                <a href="https://www.linkedin.com/in/rranjanin2012" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="https://www.linkedin.com/in/rr466" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
 
                             <li>
