--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
                             <i class="fa fa-fire fa-3x"></i>
                         </div>
                     </div>
-                    <img src="images/coming-soon-1898936_960_720.jpg" class="img-responsive" alt="">
+                    <img src="images/TradeTrafic.jpg" class="img-responsive" alt="TradeTrafic">
                 </a>
                 <div class="projects-caption">
-                    <h4>Project Name</h4>
-                    <p class="text-muted">Technology</p>
+                    <h4>TradeTrafic</h4>
+                    <p class="text-muted">Web-Designing Company (Make Your Bussiness Bigger...). &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</p>
                 </div>
             </div>
             <!-- End of Projects img2 -->
