--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 </a>
                 <div class="projects-caption">
                     <h4>TradeTrafic</h4>
-                    <p class="text-muted">Web-Designing Company (Make Your Bussiness Bigger...). &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</p>
+                    <p class="text-muted">Web-Designing Company (Make Your Bussiness Bigger...). </p>
                 </div>
             </div>
             <!-- End of Projects img2 -->
